# zCore

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
docs/: README-D1.md
drivers/: Cargo.toml
drivers/src/builder/: devicetree.rs
drivers/src/virtio/: mod.rs
elf/: Cargo.toml
elf/src/: elf.rs  elf_file.rs  lib.rs
kernel-hal/: Cargo.toml
kernel-hal/src/common/: mem.rs
keystone-examples/: Cargo.toml
keystone-runtime/: Makefile  boot.c  rt_util.c  runtime.lds  syscall.c
keystone-runtime/tmplib/: Makefile
keystone-rust-sdk/: Cargo.toml
keystone-rust-sdk/src/: lib.rs
keystone-rust-sdk/src/app/: encret.rs  encret.s  mod.rs  sealing.rs  syscall.rs
keystone-rust-sdk/src/common/: sha3.rs
keystone-rust-sdk/src/edge/: call.rs  common.rs  dispatch.rs  mod.rs  syscall.rs  syscall_nums.rs
keystone-rust-sdk/src/host/: common.rs  enclave.rs  error.rs  ioctl.rs  keystone_device.rs  keystone_user.rs  memory.rs  mod.rs  params.rs  physical_enclave_memory.rs  simulated_enclave_memory.rs  syscall.rs
linux-object/: Cargo.toml
linux-object/src/: lib.rs  process.rs
linux-object/src/fs/: aes.rs  (+3 more)
linux-syscall/: Cargo.toml
linux-syscall/src/: lib.rs  signal.rs  vm.rs
linux-user/: Cargo.toml  Makefile
linux-user/.cargo/: config
linux-user/app/: Cargo.toml
linux-user/app/src/: linker.ld
linux-user/host/: Cargo.toml
linux-user/host/src/: linker.ld
linux-user/src/: hello-host.rs  lang_items.rs  lib.rs  linker.ld  syscall.rs
loader/: Cargo.toml
prebuilt/linux/: README.md
zCore/: Cargo.toml  Makefile
zCore/src/: logging.rs
zircon-object/: Cargo.toml
zircon-syscall/src/: vmo.rs
(+16 files in other folders)
