[workspace]
members = [
    "drivers",
    "kernel-hal",
    "zircon-object",
    "zircon-syscall",
    "linux-object",
    "linux-syscall",
    "loader",
    "zCore"
]

exclude = [
    "zircon-user",
    "linux-user"
]

[profile.release]
lto = true

[profile.dev]
opt-level = 0
overflow-checks = false

