[package]
name = "keystone-rust-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
big_endian = []
riscv_32 = []

[dependencies]
libc = "0.2.125"
elf = { path="../elf" }
kernel-hal = { path = "../kernel-hal", default-features = false }
