[package]
name = "app"
version = "0.1.0"
authors = ["Yutao Sun <sunyt32@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
spin = "0.9"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
keystone-rust-sdk = { path = "../keystone-rust-sdk" }
linux_user = { path = ".." }
